# simplecryoem

./: .gitignore  README.md  environment.yml  pyproject.toml  rotations.ipynb
data/: ground_truth_simulated.mrc  pointmass.mrc  pyem_onerow.star  rec_final.mrc  reconstruction.mrc  reconstruction_c.mrc  reconstruction_c01.mrc  reconstruction_c100.mrc  reconstruction_data_32.mrc  reconstruction_data_32_angles_rec.mrc  reconstruction_data_32_cg_alpha.mrc  reconstruction_data_32_sgd_alpha.mrc  reconstruction_data_sgd.mrc  reconstruction_simulated.mrc  relion_proj.mrc  relion_proj_batch.mrcs  relion_proj_batch_pfac2.mrcs  relion_proj_rot45.mrc  relion_proj_rot45tilt.mrc  relion_proj_rot45tilt_shifts.mrc  relion_proj_rot90.mrc  relion_proj_star.spi  relion_proj_star.star  relion_proj_star_pfac2.mrcs  relion_proj_star_pfac2.star  relion_proj_star_pfac3.star  simulated_rec3.mrc  simulated_rec_vol.mrc
nb/: ASPIRE.ipynb  ASPIRE_comparison.ipynb  ASPIRE_reconstruction.ipynb  Bug.ipynb  Create_simulated_data.ipynb  Cryojax_comparison.ipynb  Dirichlet.ipynb  Exp_avg.ipynb  Fourier_point_source.ipynb  Fourier_slice_rotation.ipynb  GD.ipynb  GM.ipynb  Higher_stochastic.ipynb  Higher_stochastic_condition_number.ipynb  Higher_stochastic_plots.ipynb  MALA.ipynb  MCMC.ipynb  Misc.ipynb  Model1D.ipynb  Orientations.ipynb  Point_source.ipynb  Point_source_pi4.ipynb  Pyem.ipynb  Pyem_comparison.ipynb  Reconstruction.ipynb  Reconstruction_data.ipynb  Reconstruction_simple.ipynb  Regrid.ipynb  Relion_comparison.ipynb  Rotate_and_FSC.ipynb  SART.ipynb  Simple_SGD.ipynb  Tests.ipynb  (+5 more)
(+137 files in other folders)
