[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "simplecryoem"
authors = [
   { name = "Bogdan Toader", email = "btoader@mrc-lmb.cam.ac.uk"},
]

version = "0.1"
dependencies = [
    "numpy",
    "jax",
    "jaxlib",
    "tqdm",
    "matplotlib",
]


